--- a/README.org
+++ b/README.org
@@ -27,8 +27,11 @@ If you want to do another thing, you can specify an arbitrary function.
 #+END_SRC
 
 ** Instllation
-*** Cask
+*** Cask (without [[https://github.com/rdallasgray/pallet][pallet]])
 See [[http://cask.readthedocs.org/en/latest/guide/installation.html][Cask Installation]].  put into your own =Cask= file.
+#+BEGIN_SRC emacs-lisp
+(depends-on "init-open-recentf")
+#+END_SRC
 *** MELPA
 See [[http://melpa.org/#/getting-started][Getting Started - MELPA]].  =M-x package-install= and type =init-open-recentf=.
 *** El-get
