--- a/README.org
+++ b/README.org
@@ -2,13 +2,13 @@
 
 Open recentf immediately after Emacs is started.
 Here are some example scenarios for when Emacs is started from the command line:
-  - If files are opened (e.g. '$ emacs file1.txt'), nothing out of the ordinary occurs-- the file is opened.
-  - However if a file is not indicated (e.g. '$ emacs '), recentf will be opened after emacs is initialized.
+  - If files are opened (e.g. =$ emacs file1.txt=), nothing out of the ordinary occurs-- the file is opened.
+  - However if a file is not indicated (e.g. =$ emacs =), recentf will be opened after emacs is initialized.
 This script uses only the inbuilt advice function for startup.  It does not require or use any interactive function.
 
 ** Setup
 
-Put the following into your .emacs file (~/.emacs.d/init.el)
+Put the following into your .emacs file (=~/.emacs.d/init.el=)
 
 #+BEGIN_SRC emacs-lisp
 (init-open-recentf)
