Fix link to http pages

--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 * init-open-recentf.el
 #+BEGIN_HTML
-<a href="http://melpa.org/#/init-open-recentf"><img alt="MELPA init-open-recentf" src="http://melpa.org/packages/init-open-recentf-badge.svg"</a>
-<a href="http://stable.melpa.org/#/init-open-recentf"><img alt="MELPA stable: init-open-recentf" src="http://stable.melpa.org/packages/init-open-recentf-badge.svg"></a>
+<a href="https://melpa.org/#/init-open-recentf"><img alt="MELPA init-open-recentf" src="https://melpa.org/packages/init-open-recentf-badge.svg"</a>
+<a href="https://stable.melpa.org/#/init-open-recentf"><img alt="MELPA stable: init-open-recentf" src="https://stable.melpa.org/packages/init-open-recentf-badge.svg"></a>
 #+END_HTML
 
 Open recentf immediately after Emacs is started.
